--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button type="button" class="add-task__button" id="buttonAdd">Add</button>
             </form>
         </div>
-        <div class="tasks" id="tasks">
+        <div class="tasks">
             <div class="tasks__container" id="activeTasks">
                 <h2>Active tasks</h2>
                 <ul class="tasks__list" id="activeTaskList"></ul>
@@ -43,6 +43,7 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
